--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "",
   "main": "server.js",
   "scripts": {
+    "client-install":"npm install --prefix client" ,   
     "start": "node server.js",
-    "server": "nodemon server.js"
+    "server": "nodemon server.js",
+    "client": "npm start --prefix client",   
+    "dev": "concurrently \"npm run server\" \"npm run client\"" 
+    
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +19,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
+    "concurrently": "^9.0.1",
     "express": "^4.21.0",
     "gravatar": "^1.8.2",
     "jsonwebtoken": "^9.0.2",
